@@ -2128,3 +2128,10 @@ Updated example and tests.
 Renamed bm.loadfile() to read_file().
 Along with the last two commits, this fixes #79
 
+*****
+
+Refactored Bib.__init__() to default title to None, get value from
+booktitle (if there is no title field).
+Skipped no-title test (to be removed).
+
+
